# AMD_AVP

./: README.md  additional_deps.repos  setup_env.sh
compresssed_files/parking_map/wixom_bank/: pointcloud_map.pcdaa  pointcloud_map.pcdab  pointcloud_map.pcdac  pointcloud_map.pcdad  pointcloud_map.pcdae  pointcloud_map.pcdaf  pointcloud_map.pcdag
compresssed_files/parking_map/wixom_ofc/: pointcloud_map.pcdaa  pointcloud_map.pcdab  pointcloud_map.pcdac  pointcloud_map.pcdad  pointcloud_map.pcdae  pointcloud_map.pcdaf  pointcloud_map.pcdag  pointcloud_map.pcdah  pointcloud_map.pcdai  pointcloud_map.pcdaj  pointcloud_map.pcdak  pointcloud_map.pcdal  pointcloud_map.pcdam  pointcloud_map.pcdan  pointcloud_map.pcdao  pointcloud_map.pcdap  pointcloud_map.pcdaq  pointcloud_map.pcdar  pointcloud_map.pcdas
launch_scripts/: cyclonedds_config.xml  launch.config  launch.sh  launch_api.sh  launch_control.sh  launch_hmi.sh  launch_htop.sh  launch_kvs.sh  launch_localization.sh  launch_map.sh  launch_perception.sh  launch_planning.sh  launch_sensing.sh  launch_sim.sh  launch_system.sh  launch_vehicle.sh  launch_viz.sh  ros_env.sh  ros_platform_env.sh  screenrc
parking_map/wixom_bank/: lanelet2_map.osm  map_config.yaml
parking_map/wixom_ofc/: lanelet2_map.osm  map_config.yaml
patch_2023_06/src/core/autoware_adapi_msgs/autoware_adapi_v1_msgs/routing/srv/: ClearRoute.srv
patch_2023_06/src/core/autoware_msgs/autoware_planning_msgs/msg/: LaneletRoute.msg
patch_2023_06/src/launcher/autoware_launch/autoware_launch/launch/apa/: apa.launch.xml  apa_api.launch.xml  apa_control.launch.xml  apa_localization.launch.xml  apa_perception.launch.xml  apa_planning.launch.xml  apa_sensing.launch.xml  apa_viz.launch.xml  (+3 more)
patch_2023_06/src/launcher/autoware_launch/autoware_launch/rviz/: apa.rviz  avp.rviz
patch_2023_06/src/universe/autoware.universe/common/amd_xilinx_module_mode_rviz_plugin/: CMakeLists.txt  package.xml
patch_2023_06/src/universe/autoware.universe/common/amd_xilinx_parking_lot_select_rviz_plugin/: CMakeLists.txt  package.xml
patch_2023_06/src/universe/autoware.universe/common/amd_xilinx_rviz_satellite_view/: CMakeLists.txt  package.xml  plugin_description.xml  tags
patch_2023_06/src/universe/autoware.universe/common/amd_xilinx_scenario_rviz_plugin/: CMakeLists.txt  package.xml
patch_2023_06/src/universe/autoware.universe/control/joy_controller/: package.xml
patch_2023_06/src/universe/autoware.universe/control/mpc_lateral_controller/: package.xml
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_msgs/: CMakeLists.txt  package.xml
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_msgs/msg/: ParkingLot.msg  ParkingLots.msg
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_msgs/srv/: UpdateGoalPose.srv
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_src/: CMakeLists.txt  README.md  package.xml
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_src/config/: motovis.param.yaml
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_src/include/motovis_interface/: SharedMemoryInterface.h  motovis_interface.hpp  slotdetect_wrapper.h  vehicle_info.h
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_src/launch/: apa.launch.xml  motovis_interface.launch.xml  motovis_interface_standalone.launch.xml
patch_2023_06/src/universe/autoware.universe/perception/amd_xilinx_perception/motovis_interface/motovis_interface_src/src/: motovis_interface.cpp  motovis_interface_node.cpp
patch_2023_06/src/universe/autoware.universe/planning/avp_planner/: CMakeLists.txt  package.xml
patch_2023_06/src/universe/autoware.universe/planning/avp_planner/config/: avp_planner.param.yaml
patch_2023_06/src/universe/autoware.universe/planning/avp_planner/include/avp_planner/: avp_planner.hpp
patch_2023_06/src/universe/autoware.universe/planning/avp_planner/launch/: avp_planner.launch.xml
patch_2023_06/src/universe/autoware.universe/planning/avp_planner/src/: avp_planner.cpp  avp_planner_node.cpp
patch_2023_06/src/universe/autoware.universe/planning/behavior_path_planner/: CMakeLists.txt
patch_2023_06/src/universe/autoware.universe/planning/costmap_generator/: CMakeLists.txt  package.xml
patch_2023_06/src/universe/autoware.universe/planning/freespace_planner/: package.xml
patch_2023_06/src/universe/autoware.universe/planning/planning_validator/: CMakeLists.txt
patch_2023_06/src/universe/autoware.universe/sensing/gnss_poser/: package.xml
(+114 files in other folders)
