<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avp_planner</name>
  <version>0.0.0</version>
  <description>The motovis interface package</description>
  <maintainer email="nselvara@amd.com">Narendar Selvaraj</maintainer>
  <license>Apache License 2.0</license>
  <author email="nselvara@amd.com">Narendar Selvaraj</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>vehicle_info_util</depend>
  <depend>pacmod3_msgs</depend>
  <depend>message_filters</depend>
  <depend>motovis_interface_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>route_handler</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>motion_utils</depend>
  <depend>autoware_ad_api_specs</depend>
  <depend>component_interface_utils</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
