<?xml version="1.0"?>
<package format="3">
  <name>motovis_interface_msgs</name>
  <version>0.0.0</version>
  <description>
      Messages for Motovis_interface.
  </description>

  <maintainer email="nselvara@amd.com">Motovis Interface Support</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
      <build_type>ament_cmake </build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
